# NovaBar

./: .gitignore  CHANGELOG.md  CURRENT_STATUS.md  ENHANCED_BLUETOOTH_NOW_DEFAULT.md  INSTALL.md  README.md  SEGFAULT_FIX_SUMMARY.md  TESTING_ENHANCED_BLUETOOTH.md  TODO.md  debug_novabar.sh  meson.build  meson_options.txt  novabar-autostart.desktop  novabar.desktop  novabar_0.1.3_amd64.deb.sha256  release_notes.md  test_config_debug.sh
.kiro/specs/enhanced-bluetooth-indicator/: CHECKPOINT_14_VERIFICATION.md  CHECKPOINT_5_VERIFICATION.md  CHECKPOINT_8_VERIFICATION.md  TASK_15_SUMMARY.md  TASK_16_SUMMARY.md  TASK_19_SUMMARY.md  TASK_9_SUMMARY.md  design.md  requirements.md  tasks.md
.kiro/specs/enhanced-network-indicator/: design.md  requirements.md  tasks.md
data/: novaos-light.css
debian-pkg/DEBIAN/: control  postinst  postrm
debian-pkg/etc/xdg/autostart/: novabar-autostart.desktop
debian-pkg/usr/share/dbus-1/services/: com.canonical.AppMenu.Registrar.service
debian-pkg/usr/share/locale/de/LC_MESSAGES/: novabar.mo
debian-pkg/usr/share/locale/es/LC_MESSAGES/: novabar.mo
debian-pkg/usr/share/locale/fr/LC_MESSAGES/: novabar.mo
debian-pkg/usr/share/locale/it/LC_MESSAGES/: novabar.mo
debian-pkg/usr/share/locale/pl/LC_MESSAGES/: novabar.mo
debian-pkg/usr/share/locale/pt_BR/LC_MESSAGES/: novabar.mo
debian-pkg/usr/share/novaos/: novaos.css
po/: LINGUAS  POTFILES  de.po  es.po  fr.po  it.po  meson.build  novabar.pot  pl.po  pt_BR.po
src/: main.vala  panel.vala
src/about/: about.vala
src/backend/: backend.vala  popup.vala  wayland.vala  x11.vala
src/globalmenu/: README.md  dbusmenu_client.vala  menubar.vala  registrar.vala
src/indicators/battery/: battery.vala
src/indicators/bluetooth/: ENHANCED_WRAPPER_README.md  bluetooth.vala  enhanced_wrapper.vala
src/indicators/bluetooth/enhanced/: bluetooth_controller.vala  bluetooth_indicator.vala  notification_manager.vala
src/indicators/bluetooth/enhanced/managers/: .gitkeep  adapter_manager.vala  agent_manager.vala  audio_manager.vala  bluez_client.vala  device_manager.vala  transfer_manager.vala
src/indicators/bluetooth/enhanced/models/: audio_profile.vala  bluetooth_adapter.vala  bluetooth_device.vala  bluetooth_error.vala  enums.vala  file_transfer.vala  pairing_request.vala
src/indicators/bluetooth/enhanced/ui/: KEYBOARD_SHORTCUTS.md  accessibility_helper.vala  bluetooth_panel.vala  bluetooth_popover.vala  device_detail_view.vala  keyboard_navigation.vala  pairing_dialog.vala  settings_panel.vala
src/indicators/bluetooth/enhanced/utils/: config_manager.vala  error_handler.vala  polkit_client.vala
src/indicators/controlcenter/: controlcenter.vala
src/indicators/datetime/: datetime.vala
src/indicators/network/: enhanced_wrapper.vala  network.vala
src/indicators/network/enhanced/: advanced_config_manager.vala  bandwidth_monitor.vala  error_handler.vala  ethernet_manager.vala  hotspot_manager.vala  mobile_manager.vala  network_controller.vala  network_indicator.vala  network_monitor.vala  network_popover.vala  network_profile_manager.vala  nm_client.vala  polkit_client.vala  security_analyzer.vala  string_utils.vala  vpn_manager.vala  wifi_manager.vala
src/indicators/network/enhanced/models/: enums.vala  hotspot_configuration.vala  mobile_connection.vala  network_connection.vala  network_profile.vala  vpn_profile.vala  wifi_network.vala
src/indicators/network/enhanced/ui/: accessibility_helper.vala  connection_dialog.vala  ethernet_panel.vala  hotspot_panel.vala  keyboard_navigation.vala  mobile_panel.vala  monitor_panel.vala  network_panel.vala  overview_panel.vala  settings_panel.vala  vpn_panel.vala  wifi_panel.vala
src/indicators/notifications/: notifications.vala
src/indicators/sound/: sound.vala
src/logomenu/: README.md  logomenu.vala
src/settings/: settings.vala
src/toplevel/: tracker.vala  wayland.vala  x11.vala
src/wayland/: wlr-toplevel.c  wlr-toplevel.h  wlr-toplevel.vapi
tests/: meson.build
tests/enhanced-bluetooth-indicator/: test_adapter_manager.vala  test_adapter_simple.vala  test_agent_manager.vala  test_audio_manager.vala  test_config_manager.vala  test_device_manager.vala  test_error_handler.vala  test_polkit_client.vala  test_transfer_manager.vala  test_wrapper.vala
tests/enhanced-network-indicator/: test_backend_integration.vala  test_backend_verification.vala  test_data_usage_monitoring  test_data_usage_monitoring.vala  test_error_handler.vala  test_polkit_integration  test_polkit_integration.vala  test_polkit_simple  test_polkit_simple.vala  test_simple_backend.vala  test_vpn_connection_management  test_vpn_connection_management.vala
